# SecondYearAss

SecondYearAss/Semester_A/Communication networks/Ass3/: Answer_Pdf_Ass3.docx  CMakeLists.txt  חלק ג.docx
SecondYearAss/Semester_A/Communication networks/Ass3/Part A/: TCP_Receiver.c  TCP_Sender.c  terminal
SecondYearAss/Semester_A/Communication networks/Ass3/Part B/: Makefile  RUDP_API.c  RUDP_API.h  RUDP_Receiver.c  RUDP_Sender.c  terminal
SecondYearAss/Semester_A/Communication networks/Ass3/part A/: TCP_Reciever.c  TCP_Sender.c  makefile  run.txt
SecondYearAss/Semester_A/Communication networks/Ass3/part B/: RUDP_API.c  RUDP_API.h  RUDP_Reciever.c  RUDP_Sender.c  makefile
SecondYearAss/Semester_A/Communication networks/Ass3/part C/part A/: TCP_stats.odt  Untitled 1.odt  chrat.py
SecondYearAss/Semester_A/Communication networks/Ass3/part C/part B/: RUDT_data.odt  chrat.py
SecondYearAss/Semester_A/OOP/Assignment1_VikingChess/: ConcretePiece.java  ConcretePlayer.java  GameLogic.java  King.java  Pawn.java  Position.java  Turn.java
SecondYearAss/Semester_A/OOP/Assignment2_SocialNetwork/: CostomExcption.py  Notificator.py  PostFactory.py  SocialNetwork.py  User.py  auto_check.py
SecondYearAss/Semester_A/Systems Programming/Assignment1/: NumClass.h  advancedClassificationLoop.c  advancedClassificationRecursion.c  basicClassification.c  main.c  makefile
SecondYearAss/Semester_A/Systems Programming/Assignment2/: makefile  my_Knapsack.c  my_graph.c  my_mat.c  my_mat.h
SecondYearAss/Semester_A/Systems Programming/Assignment3/: Main.c  Makefile  StrList.c
(+9 files in other folders)
